Applications/Kanban-api-BG/frontend/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
  namespace: frontend
spec:
  replicas: 2

  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: gangadhariy/kanban-frontend:16
        imagePullPolicy: Always

        ports:
        - containerPort: 80

        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf

        - name: nginx-run
          mountPath: /run

      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config

      - name: nginx-run
        emptyDir: {}

  strategy:
    blueGreen:
      activeService: frontend-active
      previewService: frontend-preview

      autoPromotionEnabled: false

      previewReplicaCount: 2

      scaleDownDelaySeconds: 30
