Applications/Kanban-api-BG/frontend/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-preview
  namespace: frontend

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80
