Applications/Kanban-api-BG/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend
  namespace: frontend

spec:
  ingressClassName: nginx

  rules:
  - host: ec2-13-222-2-232.compute-1.amazonaws.com

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-active
            port:
              number: 80
